# chatterbox

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: client_main.cpp  server_main.cpp
docs/: ARCHITECTURE.md
include/chatterbox/: common.hpp
include/chatterbox/client/: client.hpp  input_handler.hpp  terminal_ui.hpp
include/chatterbox/ipc/: message_queue.hpp  semaphore.hpp  shared_memory.hpp
include/chatterbox/protocol/: message.hpp  message_types.hpp  serializer.hpp  timestamp.hpp
include/chatterbox/server/: ban_registry.hpp  config_parser.hpp  connection_manager.hpp  message_history.hpp  message_router.hpp  metrics_exporter.hpp  rate_limiter.hpp  room_manager.hpp  server.hpp  signal_handler.hpp
include/chatterbox/sync/: condition_var.hpp  mutex_guard.hpp  thread_pool.hpp
src/client/: client.cpp  input_handler.cpp  terminal_ui.cpp
src/ipc/: message_queue.cpp  semaphore.cpp  shared_memory.cpp
src/protocol/: message.cpp  serializer.cpp  timestamp.cpp
src/server/: ban_registry.cpp  config_parser.cpp  connection_manager.cpp  message_history.cpp  message_router.cpp  metrics_exporter.cpp  rate_limiter.cpp  room_manager.cpp  server.cpp  signal_handler.cpp
src/sync/: condition_var.cpp  mutex_guard.cpp  thread_pool.cpp
tests/integration/: test_server_client.cpp
tests/stress/: stress_test.cpp
tests/unit/: test_ban_registry.cpp  test_config_parser.cpp  test_ipc.cpp  test_message_history.cpp  test_protocol.cpp  test_rate_limiter.cpp  test_sync.cpp
